@@ -61,6 +61,7 @@ network-exists=Network #__1__ already added
 merged-networks=Merged network #__1__ and #__2__
 empty-config=Autotrash configuration is empty.
 auto-import=Imported configuration from the character UI.
+invalid-index=Invalid index
 
 [controls]
 autotrash_pause=Pause Autotrash
